--- a/src/Bolotro.html
+++ b/src/Bolotro.html
@@ -10,8 +10,13 @@
 	<canvas id="gl-canvas" width="1024" height="512">
 		<p>Oops ... your browser doesn't support the HTML5 canvas element</p>
 	</canvas>
-	<p id="fuerza"></p>
 
+  <div id="force-container" style="position: absolute; bottom: 20px; left: 20px; background-color: rgba(0,0,0,0.7); padding: 10px; border-radius: 5px; color: white; font-family: Arial, sans-serif;">
+      <div style="margin-bottom: 5px;">Fuerza de lanzamiento:</div>
+      <div style="width: 200px; height: 20px; background-color: #333; border-radius: 10px; overflow: hidden;">
+          <div id="force-bar" style="height: 100%; width: 0%; background: linear-gradient(to right, #4CAF50, #FFEB3B, #F44336); transition: width 0.1s;"></div>
+      </div>
+  </div>
 	<!-- Vertex shader -->
 	<script id="plane-vertex-shader" type="x-shader/x-vertex">
 		attribute vec3 vPosition;
