--- a/src/Bolotro.html
+++ b/src/Bolotro.html
@@ -14,7 +14,7 @@
   <div id="force-container" style="position: absolute; bottom: 20px; left: 20px; background-color: rgba(0,0,0,0.7); padding: 10px; border-radius: 5px; color: white; font-family: Arial, sans-serif;">
       <div style="margin-bottom: 5px;">Fuerza de lanzamiento:</div>
       <div style="width: 200px; height: 20px; background-color: #333; border-radius: 10px; overflow: hidden;">
-          <div id="force-bar" style="height: 100%; width: 0%; background: linear-gradient(to right, #4CAF50, #FFEB3B, #F44336); transition: width 0.1s;"></div>
+          <div id="force-bar" style="height: 100%; width: 0%; transition: width 0.1s;"></div>
       </div>
   </div>
 	<!-- Vertex shader -->
