Code refactor INIT

--- a/src/Bolotro.html
+++ b/src/Bolotro.html
@@ -109,7 +109,6 @@
 	<script type="text/javascript" src="../Common/webgl-utils.js"></script>
 	<script type="text/javascript" src="../Common/initShaders.js"></script>
 	<script type="text/javascript" src="../Common/MVnew.js"></script>
-	<script type="text/javascript" src="Bolotro_geometria.js"></script>
-	<script type="text/javascript" src="Bolotro_base.js"></script>
+    <script type="module" src="../src/main.js"></script>
 </body>
 </html>
