--- a/html/main_menu.html
+++ b/html/main_menu.html
@@ -12,10 +12,12 @@
         <h1 class="mainTitle">BOLOTRO</h1>
         
         <div class="buttons">
-
-            <button>
-                <span>Jugar</span>
-            </button>
+            
+            <a href="../src/Bolotro.html">
+                <button>
+                    <span>Jugar</span>
+                </button>
+            </a>
 
             <button>
                 <span>Opciones</span>
