Ajustadas las rutas html

--- a/src/mainMenu/main_menu.html
+++ b/src/mainMenu/main_menu.html
@@ -13,7 +13,7 @@
         
         <div class="buttons">
             
-            <a href="../src/Bolotro.html">
+            <a href="../Bolotro.html">
                 <button>
                     <span>Jugar</span>
                 </button>
