--- a/src/Bolotro.html
+++ b/src/Bolotro.html
@@ -110,5 +110,6 @@
 	<script type="text/javascript" src="../Common/initShaders.js"></script>
 	<script type="text/javascript" src="../Common/MVnew.js"></script>
     <script type="module" src="../src/main.js"></script>
+	<script type="module" src="ForceBar.js"></script>
 </body>
 </html>
