--- a/src/Bolotro.html
+++ b/src/Bolotro.html
@@ -3,11 +3,20 @@
 <head>
 	<title>Bolotro</title>
   <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
+  <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+    </style>
 </head>
 
 <body>
 	<!-- El canvas, que permite renderizar con WebGL -->
-	<canvas id="gl-canvas" width="1024" height="512">
+  <canvas id="gl-canvas" style="width: 100%; height: 100%; display: block;">
 		<p>Oops ... your browser doesn't support the HTML5 canvas element</p>
 	</canvas>
 
@@ -84,6 +93,22 @@
 		}
    </script>
 
+  <script id="cube-vertex-shader" type="x-shader/x-vertex">
+		attribute vec3 vPosition;
+		attribute vec4 vColor;
+
+		uniform mat4 model; // model matrix
+		uniform mat4 view; // view matrix 
+		uniform mat4 projection; // projection matrix
+
+		varying vec3 origPos;
+		void main() 
+		{
+			origPos = vPosition;
+			gl_Position = projection * view * model * vec4(vPosition, 1);
+		}
+   </script>
+
 	<!-- Fragment shader -->
 	<script id="plane-fragment-shader" type="x-shader/x-fragment">
     precision mediump float;
@@ -123,6 +148,26 @@
     void main() {
         vec2 uv = sphericalMap(origPos);
         vec4 texColor = texture2D(u_texture, uv);
+        gl_FragColor = texColor * baseColor;
+    }
+  </script>
+
+  <script id="cube-fragment-shader" type="x-shader/x-fragment">
+    precision mediump float;
+    uniform sampler2D u_texture;
+    uniform vec4 baseColor;
+
+    varying vec3 origPos;
+
+    void main() {
+        // Convertir coordenadas del plano (-30 a 30 en X, -10 a 10 en Y) a UV (0 a 1)
+        // Considerando que tu plano tiene 60 unidades de ancho (X) y 20 de alto (Y)
+        float u = (origPos.x + 30.0) / 60.0;  // Normalizar X: [-30,30] -> [0,1]
+        float v = (origPos.y + 10.0) / 20.0;  // Normalizar Y: [-10,10] -> [0,1]
+    
+        // Invertir coordenada V si la textura aparece al revés
+    
+        vec4 texColor = texture2D(u_texture, vec2(u, v));
         gl_FragColor = texColor * baseColor;
     }
   </script>
