--- a/src/Bolotro.html
+++ b/src/Bolotro.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Bolotro</title>
+    <meta charset="UTF-8">
   <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
   <style>
         html, body {
@@ -10,6 +11,63 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
+        }
+        #music-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background: linear-gradient(90deg, #1e90ff 0%, #ff69b4 100%);
+            color: white;
+            border: none;
+            border-radius: 10px;
+            padding: 16px 28px;
+            font-family: Arial, sans-serif;
+            font-size: 20px;
+            font-weight: bold;
+            cursor: pointer;
+            z-index: 100;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+            min-width: 150px;
+        }
+        
+        #sound-button {
+            position: absolute;
+            top: 80px;
+            left: 20px;
+            background: linear-gradient(90deg, #1e90ff 0%, #ff69b4 100%);
+            color: white;
+            border: none;
+            border-radius: 10px;
+            padding: 16px 28px;
+            font-family: Arial, sans-serif;
+            font-size: 20px;
+            font-weight: bold;
+            cursor: pointer;
+            z-index: 100;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+            min-width: 150px;
+        }
+
+        #music-button:hover, #sound-button:hover {
+            background: linear-gradient(90deg, #1a7fd8 0%, #e05294 100%);
+            transform: scale(1.05);
+            box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+        }
+
+        #music-button:active, #sound-button:active {
+            transform: scale(0.98);
         }
     </style>
 </head>
@@ -20,7 +78,33 @@
 		<p>Oops ... your browser doesn't support the HTML5 canvas element</p>
 	</canvas>
 
-  <div id="force-container" style="position: absolute; bottom: 20px; left: 20px; background-color: rgba(0,0,0,0.7); padding: 10px; border-radius: 5px; color: white; font-family: Arial, sans-serif;">
+  <button id="music-button">▶ Música</button>
+  <button id="sound-button">🔇 Sonido</button>
+
+  <button id="background-button" style="position: absolute; top: 140px; left: 20px;
+    background: linear-gradient(90deg, #1e90ff 0%, #ff69b4 100%);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 16px 28px;
+    font-family: Arial, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 100;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    min-width: 150px;">
+    🎨 Cambiar fondo pista
+  </button>
+
+
+  <div id="force-container" style="position: absolute; bottom: 20px; left: 20px; background: linear-gradient(90deg, #1e90ff 0%, #ff69b4 100%); padding: 10px; border-radius: 5px; color: white; font-family: Arial, sans-serif;">
     <div style="margin-bottom: 5px;">Fuerza de lanzamiento:</div>
     <div style="width: 200px; height: 20px; background-color: #333; border-radius: 10px; overflow: hidden;">
         <div id="force-bar" style="height: 100%; width: 0%; transition: width 0.1s;"></div>
@@ -33,7 +117,7 @@
     </div>
   </div>
 
-  <div id="score-container" style="position: absolute; top: 20px; right: 20px; background-color: rgba(0,0,0,0.7); padding: 10px; border-radius: 5px; color: white; font-family: Arial, sans-serif; width: 500px;">
+  <div id="score-container" style="position: absolute; top: 20px; right: 20px; background: linear-gradient(90deg, #1e90ff 0%, #ff69b4 100%); padding: 10px; border-radius: 5px; color: white; font-family: Arial, sans-serif; width: 500px;">
     <h3 style="margin-top: 0; margin-bottom: 10px; text-align: center;">Tabla de puntos</h3>
     <table id="score-table" style="width: 100%; border-collapse: collapse; text-align: center;">
         <thead>
@@ -60,6 +144,89 @@
         </tbody>
     </table>
   </div>
+
+    <audio id="background-music" loop>
+        <source src="../assets/music.ogg" type="audio/ogg">
+        Tu navegador no soporta el elemento de audio.
+    </audio>
+
+    <audio id="collision-sound">
+    <source src="../assets/collision.ogg" type="audio/ogg">
+    Tu navegador no soporta el elemento de audio.
+</audio>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const musicButton = document.getElementById('music-button');
+            const backgroundMusic = document.getElementById('background-music');
+            let isPlaying = false;
+
+            musicButton.addEventListener('click', function() {
+                if (isPlaying) {
+                    backgroundMusic.pause();
+                    musicButton.textContent = '▶ Música';
+                } else {
+                    backgroundMusic.play();
+                    musicButton.textContent = '❚❚ Música';
+                }
+                isPlaying = !isPlaying;
+            });
+
+            // Opcional: Reproducir automáticamente (puede no funcionar en algunos navegadores)
+            backgroundMusic.volume = 0.5; // Volumen al 50%
+        });
+    </script>
+
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        const soundButton = document.getElementById('sound-button');
+        const collisionSound = document.getElementById('collision-sound');
+        let soundEnabled = false;
+
+        // Actualizar el texto del botón para reflejar el estado inicial
+        soundButton.textContent = '🔇 Sonido';
+
+        soundButton.addEventListener('click', function() {
+            soundEnabled = !soundEnabled;
+            soundButton.textContent = soundEnabled ? '🔊 Sonido' : '🔇 Sonido';
+        });
+
+        // Función global para reproducir sonido de colisión
+        window.playCollisionSound = function() {
+            if (soundEnabled) {
+                try {
+                    collisionSound.currentTime = 0;
+                    collisionSound.volume = 0.3;
+                    collisionSound.play().then(() => {
+                    }).catch(error => {
+                        console.error('Error al reproducir sonido:', error);
+                    });
+                } catch (error) {
+                    console.error('Error en playCollisionSound:', error);
+                }
+            }
+        };
+    });
+  </script>
+
+  <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        const backgroundButton = document.getElementById('background-button');
+        const fondoTexturas = [
+          "../assets/wood.jpg",
+          "../assets/capibara.jpg",
+        ];
+        let currentFondo = 0;
+
+        backgroundButton.addEventListener('click', () => {
+          currentFondo = (currentFondo + 1) % fondoTexturas.length;
+          const plano = window.sceneManager.getPlano();  // usamos escena global
+          const gl = window.webgl.gl;                    // acceso al contexto GL
+          plano.loadTexture(gl, fondoTexturas[currentFondo]);
+        });
+      });
+  </script>
+
 
 	<!-- Vertex shader -->
 	<script id="plane-vertex-shader" type="x-shader/x-vertex">
