--- a/src/Bolotro.html
+++ b/src/Bolotro.html
@@ -60,13 +60,37 @@
             min-width: 150px;
         }
 
-        #music-button:hover, #sound-button:hover {
+        #background-button {
+            position: absolute;
+            top: 140px;
+            left: 20px;
+            background: linear-gradient(90deg, #1e90ff 0%, #ff69b4 100%);
+            color: white;
+            border: none;
+            border-radius: 10px;
+            padding: 16px 28px;
+            font-family: Arial, sans-serif;
+            font-size: 20px;
+            font-weight: bold;
+            cursor: pointer;
+            z-index: 100;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+            min-width: 150px;
+        }  
+        
+        #music-button:hover, #sound-button:hover, #background-button:hover {
             background: linear-gradient(90deg, #1a7fd8 0%, #e05294 100%);
             transform: scale(1.05);
             box-shadow: 0 6px 20px rgba(0,0,0,0.3);
         }
 
-        #music-button:active, #sound-button:active {
+        #music-button:active, #sound-button:active, #background-button:active {
             transform: scale(0.98);
         }
     </style>
@@ -80,29 +104,7 @@
 
   <button id="music-button">▶ Música</button>
   <button id="sound-button">🔇 Sonido</button>
-
-  <button id="background-button" style="position: absolute; top: 140px; left: 20px;
-    background: linear-gradient(90deg, #1e90ff 0%, #ff69b4 100%);
-    color: white;
-    border: none;
-    border-radius: 10px;
-    padding: 16px 28px;
-    font-family: Arial, sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    cursor: pointer;
-    z-index: 100;
-    transition: all 0.3s ease;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 12px;
-    min-width: 150px;">
-    🎨 Cambiar fondo pista
-  </button>
-
+  <button id="background-button">🎨 Cambiar fondo pista</button>
 
   <div id="force-container" style="position: absolute; bottom: 20px; left: 20px; background: linear-gradient(90deg, #1e90ff 0%, #ff69b4 100%); padding: 10px; border-radius: 5px; color: white; font-family: Arial, sans-serif;">
     <div style="margin-bottom: 5px;">Fuerza de lanzamiento:</div>
