--- a/src/Bolotro.html
+++ b/src/Bolotro.html
@@ -217,6 +217,9 @@
         const fondoTexturas = [
           "../assets/wood.jpg",
           "../assets/capibara.jpg",
+          "../assets/Mena.jpg",
+          "../assets/Javi.jpg",
+          "../assets/Tralalero.jpg",
         ];
         let currentFondo = 0;
 
